# CPP-Template-Bootcamp

./: CMakeLists.txt  Dockerfile  Makefile  README.md  app.py
Stages/1/: CMakeLists.txt  main.cpp  stage.py
Stages/1/problem/: README.md  main.cpp  solution.hpp
Stages/1/solution/: README.md  solution.hpp
Stages/2/: CMakeLists.txt  main.cpp
Stages/2.5/problem/: README.md
Stages/2/problem/: README.md
Stages/2/solution/: README.md  solution.hpp
Stages/3/: CMakeLists.txt  main.cpp
Stages/3/include/: buffer.hpp  humans.hpp
Stages/3/problem/: README.md  solution.hpp
Stages/3/solution/: README.md  solution.hpp
Stages/4/: CMakeLists.txt  main.cpp
Stages/4/problem/: README.md  solution.hpp
Stages/4/solution/: README.md  solution.hpp
Stages/5/: CMakeLists.txt  main.cpp
Stages/5.5/problem/: README.md
Stages/5.5/solution/: README.md  solution.hpp
Stages/5/include/: aliens.hpp
Stages/5/problem/: README.md  solution.hpp
Stages/5/solution/: README.md  solution.hpp
appendix/: Auto Parameters for Ordinary Functions.md
dev/: generate_makefile.py  requirements.txt
